[package]
name = "advent-2015"
version = "0.1.0"
authors = ["Adam Rodger <adam.rodger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
md5 = "0.7.0"
nom = "6"
rayon = "1.5.0"

[dev-dependencies]
test-case = "1.1.0"